V 0.410 Dashboard with cards, new status

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -277,7 +277,20 @@
     "quickActions": "Quick Actions",
     "contractsOverview": "Your Contracts",
     "packageEntriesOverview": "Package Entries",
-    "bookingsOverview": "Your Bookings"
+    "bookingsOverview": "Your Bookings",
+    "hasEntries": "You have",
+    "usableEntries": "entries available",
+    "hasRemainingDays": "You have",
+    "daysRemaining": "days remaining",
+    "expiredOn": "Expired on",
+    "expiresOn": "Expires",
+    "bookEntry": "BOOK ENTRY",
+    "buyMoreEntries": "BUY MORE ENTRIES",
+    "buyNewPackage": "BUY NEW PACKAGE",
+    "autoRenewActive": "Auto-renewal enabled",
+    "renewNow": "RENEW NOW",
+    "noActiveContracts": "You have no active contracts",
+    "getStarted": "Get Started"
   },
   "partners": {
     "title": "Partners",
@@ -297,9 +310,12 @@
     "inactive": "Inactive",
     "pending": "Pending",
     "suspended": "Suspended",
-    "company": "Company",
     "individual": "Individual",
-    "organization": "Organization",
+    "freelancer": "Free Lance",
+    "entrepeneur": "Entrepeneur",
+    "employee": "Employee",
+    "tourist": "Tourist",
+    "student": "Student",
     "noPartnersFound": "No partners found. Create your first partner to get started.",
     "noPartnerAssigned": "No partner assigned to your account.",
     "phone": "Phone",
@@ -449,7 +465,11 @@
     "passwordResetSuccessfully": "Password reset successfully",
     "errorResettingPassword": "Error resetting password",
     "invalidResetLink": "Invalid or expired reset link",
-    "invalidVatPercentage": "VAT percentage must be between 0% and 100%"
+    "invalidVatPercentage": "VAT percentage must be between 0% and 100%",
+    "autoRenewEnabled": "Auto-renewal enabled",
+    "autoRenewDisabled": "Auto-renewal disabled",
+    "errorUpdatingAutoRenew": "Error updating auto-renewal",
+    "bookingConfirmedSuccessfully": "Reservation confirmed successfully"
   },
   "services": {
     "title": "Services",
