--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -277,7 +277,20 @@
     "quickActions": "Azioni Rapide",
     "contractsOverview": "I Tuoi Contratti",
     "packageEntriesOverview": "Ingressi Pacchetti",
-    "bookingsOverview": "Le Tue Prenotazioni"
+    "bookingsOverview": "Le Tue Prenotazioni",
+    "hasEntries": "Hai ancora",
+    "usableEntries": "ingressi utilizzabili",
+    "hasRemainingDays": "Hai ancora",
+    "daysRemaining": "giorni rimanenti",
+    "expiredOn": "Scaduto il",
+    "expiresOn": "Scadenza",
+    "bookEntry": "PRENOTA INGRESSO",
+    "buyMoreEntries": "ACQUISTA ALTRI INGRESSI",
+    "buyNewPackage": "ACQUISTA NUOVO PACCHETTO",
+    "autoRenewActive": "Rinnovo automatico attivato",
+    "renewNow": "RINNOVA ADESSO",
+    "noActiveContracts": "Non hai contratti attivi",
+    "getStarted": "Inizia ora"
   },
   "partners": {
     "title": "Partner",
@@ -297,9 +310,12 @@
     "inactive": "Inattivo",
     "pending": "In attesa",
     "suspended": "Sospeso",
-    "company": "Azienda",
     "individual": "Individuale",
-    "organization": "Organizzazione",
+    "freelancer": "Free Lance",
+    "entrepeneur": "Imprenditore",
+    "employee": "Impiegato",
+    "tourist": "Turista",
+    "student": "Studente",
     "noPartnersFound": "Nessun partner trovato. Crea il tuo primo partner per iniziare.",
     "noPartnerAssigned": "Nessun partner assegnato al tuo account.",
     "phone": "Telefono",
@@ -450,7 +466,11 @@
     "passwordResetSuccessfully": "Password reimpostata con successo",
     "errorResettingPassword": "Errore nel reimpostare la password",
     "invalidResetLink": "Link di reset non valido o scaduto",
-    "invalidVatPercentage": "La percentuale IVA deve essere compresa tra 0% e 100%"
+    "invalidVatPercentage": "La percentuale IVA deve essere compresa tra 0% e 100%",
+    "autoRenewEnabled": "Rinnovo automatico attivato",
+    "autoRenewDisabled": "Rinnovo automatico disattivato",
+    "errorUpdatingAutoRenew": "Errore nell'aggiornamento del rinnovo automatico",
+    "bookingConfirmedSuccessfully": "Prenotazione confermata con successo"
   },
   "services": {
     "title": "Servizi",
